--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -73,7 +73,7 @@
           <div class="box" style="display: flex; flex-direction: column; justify-content: center; padding-left: 2%;">
             <h3>Class : 12th.</h3>
             <h3>Board: Punjab School Education Board(PSEB).</h3>
-            <h3>Stream: Medical</h3>
+            <h3>Stream: Non-Medical</h3>
             <h3>School Name: SarvhitKari Vidya Mandir School Hoshiarpur.</h3>
             <h3>Percentage: 85%</h3>
           </div>
@@ -193,7 +193,7 @@
       </div>
       <div class="end">
        <h1>Contact Me</h1>
-        <h4>1. Phone N0: +91 9530700176</h4>
+        <h4>1. Phone N0: +91 9XXXXXXXXX</h4>
         <h4>2. email: gauravtakhi68@gmail.com</h4>
         <h4>2. LinkedIn: <a href="https://www.linkedin.com/in/gaurav-7b9736216?original_referer=">Gaurav .</a></h4>
         <h4>3. GitHub: <a href="https://github.com/gaumrab">Click Here.</a></h4>
