--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -31,8 +31,8 @@
             <h1>full stack web developer</h1>
             <p>- front end addicted</p>
           </div>
-          <img style="border-radius: 100%; object-fit: cover;"
-            src="profile.jpg"
+          <img style="border-bottom-left-radius: 10%; border-top-left-radius: 10%; object-fit: cover;"
+            src="p.png"
             alt="image"
           />
         </div>
